--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,8 +76,11 @@
     <string name="go_back">Go back</string>
     <string name="gps_accuracy">GPS Accuracy</string>
     <string name="gps_accuracy_template">GPS Accuracy: %.1fm</string>
+    <string name="gps_coordinates">GPS coordinates</string>
+    <string name="gps_cached_coordinates">GPS coordinates were not received within the wait time (%d seconds).\n\nPreviously cached coordinates value will be used.</string>
+    <string name="gps_unknown_coordinates">GPS coordinates were not received within the wait time (%d seconds).\n\nA fallback value of \'UNKNOWN\' will be used.</string>
     <string name="gps_location_not_available">GPS Location: Not Available</string>
-    <string name="gps_location_template">GPS Location: (%f, %f)</string>
+    <string name="gps_location_template">GPS Location: (%1$f, %2$f)</string>
     <string name="grid_id">Grid ID</string>
     <string name="important">Important</string>
     <string name="important_delete_prompt"><u>IMPORTANT</u>\nThis operation is NOT reversible!</string>
@@ -163,6 +166,7 @@
     <string name="session_id">Session ID</string>
     <string name="set_notifications_permission">Set Notifications permission</string>
     <string name="setting_mode">Setting mode…</string>
+    <string name="stopping">Stopping…</string>
     <string name="show_details">Show details</string>
     <string name="skip_time_sync"><u>Skip time sync</u></string>
     <string name="start_detecting">Start\nDetecting</string>
@@ -180,7 +184,6 @@
     <string name="state_verb_record_on_event">Recording On Event</string>
     <string name="status">Status</string>
     <string name="status_upload">Status Upload</string>
-    <string name="status_upload_intervals">Retry automatically uploading status at intervals of</string>
     <string name="stop_detecting">Stop\nDetecting</string>
     <string name="stop_recording">Stop\nRecording</string>
     <string name="stopping_upload_service">Stopping upload service…</string>
@@ -235,7 +238,12 @@
     <string name="no_paired_devices_selected">Select a device to unpair!</string>
     <string name="upload_profile_picture_error">Failed to upload profile picture!</string>
     <string name="upload_eloc_status">Upload ELOC status</string>
-    <string name="top_left">Top Left</string>
-    <string name="top_right">Top Right</string>
+    <string name="top_left">Top left</string>
+    <string name="top_right">Top right</string>
     <string name="eloc_not_found_rationale">The ELOC you are trying to connect to might be out of range or turned off.</string>
+    <string name="font_size_notice">On some devices, you may have to restart the app for the new font size to be applied.</string>
+    <string name="retry_upload_interval">Retry upload interval</string>
+    <string name="gps_location_timeout">GPS location timeout</string>
+    <string name="diagnostics">Diagnostics</string>
+    <string name="log_bt_traffic_in_logcat">Log BT traffic in logcat</string>
 </resources>
